login+register working

--- a/breathe/breathe/Base.lproj/Main.storyboard
+++ b/breathe/breathe/Base.lproj/Main.storyboard
@@ -121,6 +121,9 @@
                                         </fragment>
                                     </attributedString>
                                 </state>
+                                <connections>
+                                    <segue destination="sDl-1g-Omp" kind="presentation" id="HoJ-2O-EoT"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Breathe" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u8E-Ss-uoq">
                                 <rect key="frame" x="96" y="154" width="222" height="76.5"/>
@@ -148,9 +151,6 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="P7z-eb-4Cf"/>
-                    <connections>
-                        <segue destination="sDl-1g-Omp" kind="presentation" id="ym5-D7-Mxj"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="547-94-SkS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -189,6 +189,9 @@
                                         </fragment>
                                     </attributedString>
                                 </state>
+                                <connections>
+                                    <segue destination="sDl-1g-Omp" kind="presentation" id="zYZ-Tg-aB0"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Breathe" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y8y-j1-U9U">
                                 <rect key="frame" x="96" y="147" width="222" height="76.5"/>
@@ -216,9 +219,6 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="xmN-Af-sOQ"/>
-                    <connections>
-                        <segue destination="sDl-1g-Omp" kind="presentation" id="7bf-bl-she"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E3J-kr-sES" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -240,7 +240,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XVz-5K-Sri" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2177" y="-128"/>
+            <point key="canvasLocation" x="2155" y="-338"/>
         </scene>
         <!--To-Do List-->
         <scene sceneID="fRk-Pe-RZa">
@@ -485,7 +485,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="ym5-D7-Mxj"/>
+        <segue reference="zYZ-Tg-aB0"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="alarm" catalog="system" width="124" height="128"/>
