--- a/breathe/breathe/Base.lproj/Main.storyboard
+++ b/breathe/breathe/Base.lproj/Main.storyboard
@@ -326,83 +326,102 @@
         <!--MotivationScreen-->
         <scene sceneID="MCL-em-qhf">
             <objects>
-                <tableViewController title="MotivationScreen" modalPresentationStyle="fullScreen" id="NQ1-QU-WAg" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="PPS-BO-DVI">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="651" id="E7Z-4C-8Sh">
-                                <rect key="frame" x="0.0" y="28" width="414" height="651"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="E7Z-4C-8Sh" id="FB5-JT-T5k">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="651"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Daily Motivation" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LLm-x2-e7f">
-                                            <rect key="frame" x="20" y="11" width="203" height="65"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="65" id="3vV-es-YuV"/>
-                                                <constraint firstAttribute="height" constant="65" id="nbd-mh-YNq"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="25"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KBy-7x-SOa">
-                                            <rect key="frame" x="20" y="80" width="374" height="180"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="180" id="y12-5D-P2R"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="URQ-xM-5af">
-                                            <rect key="frame" x="20" y="341" width="332" height="242"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Healthy Tips" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iEH-bl-tJe">
-                                            <rect key="frame" x="20" y="268" width="169" height="65"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="65" id="h3f-3W-VD1"/>
-                                                <constraint firstAttribute="height" constant="65" id="nNJ-pa-5q3"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <color key="backgroundColor" red="0.88697504997253418" green="0.91591602563858032" blue="0.59533846378326416" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <constraints>
-                                        <constraint firstItem="KBy-7x-SOa" firstAttribute="leading" secondItem="URQ-xM-5af" secondAttribute="leading" id="21T-X3-twF"/>
-                                        <constraint firstItem="iEH-bl-tJe" firstAttribute="top" secondItem="KBy-7x-SOa" secondAttribute="bottom" id="2J2-N8-fSg"/>
-                                        <constraint firstItem="KBy-7x-SOa" firstAttribute="leading" secondItem="LLm-x2-e7f" secondAttribute="leading" id="4hv-t1-psv"/>
-                                        <constraint firstItem="LLm-x2-e7f" firstAttribute="leading" secondItem="FB5-JT-T5k" secondAttribute="leadingMargin" id="Izk-AX-ujK"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="URQ-xM-5af" secondAttribute="bottom" constant="57" id="Omz-PM-X1n"/>
-                                        <constraint firstItem="KBy-7x-SOa" firstAttribute="trailing" secondItem="FB5-JT-T5k" secondAttribute="trailingMargin" id="PBH-8c-1MJ"/>
-                                        <constraint firstItem="URQ-xM-5af" firstAttribute="top" secondItem="iEH-bl-tJe" secondAttribute="bottom" constant="8" symbolic="YES" id="SGH-PE-Qs8"/>
-                                        <constraint firstItem="iEH-bl-tJe" firstAttribute="leading" secondItem="FB5-JT-T5k" secondAttribute="leadingMargin" id="V8z-kL-ktf"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="URQ-xM-5af" secondAttribute="trailing" constant="42" id="cs9-Vh-5Ch"/>
-                                        <constraint firstItem="LLm-x2-e7f" firstAttribute="top" secondItem="FB5-JT-T5k" secondAttribute="topMargin" id="dum-rK-n1u"/>
-                                        <constraint firstItem="KBy-7x-SOa" firstAttribute="top" secondItem="LLm-x2-e7f" secondAttribute="bottom" constant="4" id="nNb-vZ-l6E"/>
-                                    </constraints>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="NQ1-QU-WAg" id="7AZ-gO-bgL"/>
-                            <outlet property="delegate" destination="NQ1-QU-WAg" id="uBl-Q8-GSi"/>
-                        </connections>
-                    </tableView>
+                <tableViewController title="MotivationScreen" modalPresentationStyle="fullScreen" id="NQ1-QU-WAg" customClass="MotivationViewController" customModule="breathe" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="wck-19-3MQ"/>
                     <navigationItem key="navigationItem" title="Root View Controller" id="EKo-gl-UVd"/>
+                    <connections>
+                        <outlet property="MotivationLabel" destination="X0Q-mw-Vga" id="Mck-Wu-0Ks"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mmp-Pd-4VO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="Mly-3z-Ruh" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3690" y="-449"/>
+            <point key="canvasLocation" x="3689.8550724637685" y="-449.33035714285711"/>
+        </scene>
+        <!--Motivation View Controller-->
+        <scene sceneID="mVL-uc-6hD">
+            <objects>
+                <viewController id="ciB-fO-s27" customClass="MotivationViewController" customModule="breathe" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hxc-o4-x2R">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Daily Motivation" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LLm-x2-e7f">
+                                <rect key="frame" x="52" y="122" width="203" height="65"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="65" id="3vV-es-YuV"/>
+                                    <constraint firstAttribute="height" constant="65" id="nbd-mh-YNq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Healthy Tips" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iEH-bl-tJe">
+                                <rect key="frame" x="52" y="379" width="169" height="65"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="65" id="h3f-3W-VD1"/>
+                                    <constraint firstAttribute="height" constant="65" id="nNJ-pa-5q3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="HealthyLabel" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="URQ-xM-5af">
+                                <rect key="frame" x="20" y="452" width="364" height="191"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="MotivationLabel" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X0Q-mw-Vga">
+                                <rect key="frame" x="52" y="195" width="332" height="99"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NYe-a1-t7p">
+                                <rect key="frame" x="63" y="302" width="158" height="63"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="MotivationLabel">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="MotivationButton:" destination="Mly-3z-Ruh" eventType="touchUpInside" id="R1N-b0-kcd"/>
+                                    <action selector="MotivationButton:" destination="NQ1-QU-WAg" eventType="touchUpInside" id="Z6K-sF-gBs"/>
+                                    <action selector="MotivationButton:" destination="ciB-fO-s27" eventType="touchUpInside" id="gJM-2U-QMY"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3hn-uq-kZc">
+                                <rect key="frame" x="63" y="691" width="111" height="64"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="HealthyButton">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="HealthyButton:" destination="ciB-fO-s27" eventType="touchUpInside" id="yv3-2k-Nh9"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="ixe-Y9-VWw"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="URQ-xM-5af" secondAttribute="trailing" constant="10" id="3i5-Qu-Aik"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="URQ-xM-5af" secondAttribute="bottom" constant="168" id="5bF-bw-HDg"/>
+                            <constraint firstItem="URQ-xM-5af" firstAttribute="top" secondItem="iEH-bl-tJe" secondAttribute="bottom" constant="8" symbolic="YES" id="TpU-0W-awh"/>
+                            <constraint firstItem="LLm-x2-e7f" firstAttribute="leading" secondItem="hxc-o4-x2R" secondAttribute="leadingMargin" constant="32" id="Z4u-hn-qNU"/>
+                            <constraint firstItem="iEH-bl-tJe" firstAttribute="leading" secondItem="hxc-o4-x2R" secondAttribute="leadingMargin" constant="32" id="a5p-0o-PED"/>
+                            <constraint firstItem="LLm-x2-e7f" firstAttribute="top" secondItem="hxc-o4-x2R" secondAttribute="topMargin" constant="78" id="enF-Dt-wd4"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="96b-ng-6br"/>
+                    <connections>
+                        <outlet property="HealthyLabel" destination="URQ-xM-5af" id="Qgr-s5-81z"/>
+                        <outlet property="MotivationLabel" destination="X0Q-mw-Vga" id="CWp-pB-xuS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mKE-pn-Bgi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3728.985507246377" y="-1317.1875"/>
         </scene>
         <!--Item-->
         <scene sceneID="yzc-iH-0Gl">
@@ -415,7 +434,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="NQ1-QU-WAg" kind="relationship" relationship="rootViewController" id="CqL-yN-xsM"/>
+                        <segue destination="ciB-fO-s27" kind="show" id="8dO-oC-iPr"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JBH-td-DyB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
